make it possible to highlight all words in a verse

--- a/src/components/reference/styles.scss
+++ b/src/components/reference/styles.scss
@@ -61,6 +61,11 @@
 	cursor: pointer;
 }
 
+.single, .select-single {
+	margin: 0 -1px;
+	padding: 0 1px;
+}
+
 .single:hover {
 	cursor: pointer;
 }
