--- a/src/components/search/styles.scss
+++ b/src/components/search/styles.scss
@@ -1,3 +1,5 @@
+@import '../_colors.scss';
+
 .search {
 	fieldset {
 		margin: 5px;
@@ -44,8 +46,12 @@
 	}
 	a {
 		color: black;
-		display: inline-block;
+		display: block;
 		text-decoration: none;
+
+		&:hover {
+			background: $hover;
+		}
 	}
 }
 
