move the hebrew styles to CSS

--- a/src/components/reference/styles.scss
+++ b/src/components/reference/styles.scss
@@ -45,6 +45,13 @@
 	color: black;
 }
 
+.hebrew {
+	font-family: 'Times New Roman', Times, serif;
+	font-size: 140%;
+	line-height: 1em;
+	vertical-align: middle;
+}
+
 .bookmarker {
 	cursor: pointer;
 	position: absolute;
