--- a/src/components/search/styles.scss
+++ b/src/components/search/styles.scss
@@ -72,7 +72,7 @@ $width: 70px;
 $padding: 10px;
 a.clear-all {
 	background: $hover;
-	color: #fff;
+	color: #666;
 	display: block;
 	padding: $padding;
 	position: fixed;
