--- a/css/layout.css
+++ b/css/layout.css
@@ -158,6 +158,6 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
-.H3068, .H3069, .H3050 {
+.H3068, .H3069, .H3050, .added.divineName {
   text-transform: uppercase;
 }
