always show two titles

--- a/src/components/reference/styles.scss
+++ b/src/components/reference/styles.scss
@@ -24,13 +24,17 @@
 	}
 }
 
-.heading {
+.headingSync, .heading {
 	font-family: 'Helvetica Neue';
 	font-weight: 100;
 	margin: 0 auto;
 	max-width: $column-width;
 	padding: 10px 0;
 	text-align: center;
+}
+
+.chapter-column {
+	display: flex;
 }
 
 .verseWrapper {
