let the version drop down shrink

--- a/src/components/version-selector/styles.scss
+++ b/src/components/version-selector/styles.scss
@@ -12,7 +12,7 @@
 	max-width: $total-column-width;
 }
 
-.form-field, .left-version, .right-version {
+.form-field {
 	box-sizing: border-box;
 	flex-grow: 1;
 
