load data async

--- a/src/components/reference/styles.scss
+++ b/src/components/reference/styles.scss
@@ -84,3 +84,10 @@
 .select-single:hover {
 	cursor: crosshair;
 }
+
+.placeholder {
+	background: #eee;
+	display: block;
+	height: 1em;
+	margin: .4em 0 .5em 0;
+}
