add the book selector back

--- a/src/components/trays/styles.scss
+++ b/src/components/trays/styles.scss
@@ -54,11 +54,12 @@
 }
 
 .trayFilter {
+	display: inline-block;
 	cursor: pointer;
-	flex-grow: 1;
 	margin: 0;
 	padding: 1em 0;
 	text-align: center;
+	width: 16.66%;
 
 	&:hover {
 		background: $hover;
