--- a/src/components/bookmarks/styles.scss
+++ b/src/components/bookmarks/styles.scss
@@ -9,7 +9,7 @@
 	font-family: 'Helvetica Neue';
 	font-weight: 100;
 	letter-spacing: .02em;
-	padding: 20px 20px 0 20px;
+	padding: 0 20px;
 }
 
 .bookmarksList {
