--- a/src/components/trays/styles.scss
+++ b/src/components/trays/styles.scss
@@ -100,18 +100,30 @@
 .sidebar-controls {
 	background: #fff;
 	box-shadow: 1px 1px 1px 0 rgba( 0, 0, 0, .3 );
+	display: flex;
+		align-items: center;
+		justify-content: space-between;
 	height: 39px;
-	line-height: 39px;
 	position: sticky;
 	top: 0;
-	text-align: right;
 	width: 100%;
 	z-index: 999;
-
-	a {
-		display: inline-block;
-		padding: 6px;
-		vertical-align: middle;
-	}
 }
 
+.sidebar-icon {
+	padding: 0 5px;
+}
+
+.sidebarControlsTitle {
+	padding-left: 10px;
+}
+
+.sidebarControlsInner {
+	display: flex;
+	align-items: center;
+	padding-left: 10px;
+}
+
+.sidebarControlsRight {
+	padding-right: 10px;
+}
