--- a/src/components/version-selector/styles.scss
+++ b/src/components/version-selector/styles.scss
@@ -32,14 +32,20 @@
 	border-radius: 0;
 	border-right: 0;
 	flex-grow: 1;
+	font-size: 1.2em;
 }
 
 .left-version, .right-version {
 	max-width: 100px;
+	font-size: .8em;
+	@media ( min-width: 599px ) {
+		max-width: 100px;
+		font-size: 1.2em;
+	}
+
 }
 
 .left-version, .right-version, .input {
-	font-size: 1.2em;
 	@media ( max-width: 399px ) {
 		border-top: 0;
 		border-radius: 0;
