make farsi bigger

--- a/src/components/reference/styles.scss
+++ b/src/components/reference/styles.scss
@@ -57,6 +57,12 @@
 	vertical-align: middle;
 }
 
+.farsi {
+	font-size: 120%;
+	line-height: .9em;
+	vertical-align: middle;
+}
+
 .bookmarker {
 	cursor: pointer;
 	position: absolute;
