--- a/src/components/_colors.scss
+++ b/src/components/_colors.scss
@@ -1,3 +1,4 @@
 $hover: rgba( 230, 255, 255, 1 );
 $active: rgba( 215, 245, 245, 1 );
 $grey: rgba( 0, 0, 0, 0.3 );
+$text-hover: darken( $hover, 70% );
