--- a/src/components/dock/style.scss
+++ b/src/components/dock/style.scss
@@ -1,7 +1,7 @@
 .dock {
 	position: fixed;
 	width: 100%;
-	z-index: 12;
+	z-index: 8;
 
 	@media ( min-width: 768px ) {
 		margin-left: 320px;
@@ -19,7 +19,7 @@
 	}
 
 	input {
-		flez-grow: 1;
+		flex-grow: 1;
 	}
 
 }
