--- a/css/layout.css
+++ b/css/layout.css
@@ -6,7 +6,7 @@
 body {
 	background: #fff;
 	color: #000;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", Arial, Helvetica, sans-serif;
 	font-size: 100%;
 }
 
