--- a/src/components/_dimensions.scss
+++ b/src/components/_dimensions.scss
@@ -1,4 +1,4 @@
 $column-width: 480px;
 $column-padding: 30px;
 
-$total-column-width: $column-width;
+$total-column-width: $column-width + $column-padding;
