--- a/src/components/reference/styles.scss
+++ b/src/components/reference/styles.scss
@@ -37,7 +37,7 @@
 
 .verseWrapper {
 	color: #999;
-	padding: 0 0 0 $column-padding;
+	padding: 0 $column-padding / 2;
 	position: relative;
 	flex-basis: 0;
 	flex-grow: 1;
