move the footer into the sidebar

--- a/src/components/reference/styles.scss
+++ b/src/components/reference/styles.scss
@@ -2,7 +2,7 @@
 @import '../_colors.scss';
 
 .reference {
-	height: calc( 100vh - 56px );
+	height: calc( 100vh );
 	overflow-x: hidden;
 	overflow-y: scroll;
 	width: 100%;
