layout fixes for bookmarks

--- a/src/components/reference/styles.scss
+++ b/src/components/reference/styles.scss
@@ -87,9 +87,10 @@
 	background-color: white;
 	display: flex;
 	flex-direction: column;
+	padding-top: 5px;
 	position: absolute;
 	left: 3px;
-	top: 36px;
+	top: 28px;
 	visibility: hidden;
 }
 
