make it possible to copy bookmark lists

--- a/src/components/bookmarks/styles.scss
+++ b/src/components/bookmarks/styles.scss
@@ -34,14 +34,14 @@
 
 .bookmark {
 	position: relative;
-}
+	display: flex;
+	justify-content: space-between;
 
-.cancel {
-	position: absolute;
-	right: 0;
-	top: 0;
-
-	&:hover [fill] {
+	*:hover [fill] {
 		fill: $text-hover;
 	}
+}
+
+.icons {
+	align-self: center;
 }
