--- a/src/components/_colors.scss
+++ b/src/components/_colors.scss
@@ -1,4 +1,5 @@
-$hover: rgba( 230, 255, 255, 1 );
+$hover: hsl( 180, 50, 80 );
 $active: rgba( 215, 245, 245, 1 );
 $grey: rgba( 0, 0, 0, 0.3 );
+$grey-dark: rgba( 0, 0, 0, 0.7 );
 $text-hover: darken( $hover, 70% );
