--- a/src/components/trays/styles.scss
+++ b/src/components/trays/styles.scss
@@ -148,3 +148,10 @@
 		top: 6px;
 	}
 }
+
+.sidebar-select {
+	border-bottom: 0;
+	border-top: 0;
+	border-radius: 0;
+	height: $dock-height - 1;
+}
