--- a/src/components/reference/styles.scss
+++ b/src/components/reference/styles.scss
@@ -23,7 +23,7 @@
 	cursor: pointer;
 	flex-basis: 0;
 	flex-grow: 1;
-	font-family: 'Helvetica Neue';
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", Arial, Helvetica, sans-serif;
 	font-weight: 100;
 	max-width: $column-width;
 	padding: 10px 0;
