--- a/css/layout.css
+++ b/css/layout.css
@@ -1,17 +1,19 @@
-* {
-  border: none;
-  margin: 0;
-  padding: 0; }
+* { border: none; margin: 0; padding: 0; }
+
+:root {
+	--background: #ffffff;
+	--color: #000000;
+}
 
 body {
-	background: #fff;
-	color: #000;
+	background: var(--background);
+	color: var(--color);
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", Arial, Helvetica, sans-serif;
 	font-size: 100%;
 }
 
 a {
-  color: #000;
+  color: var(--color);
   cursor: pointer;
 }
 
