--- a/css/layout.css
+++ b/css/layout.css
@@ -1,15 +1,36 @@
-* { border: none; margin: 0; padding: 0; }
+* { border: none; box-sizing: border-box; margin: 0; padding: 0; }
 
 :root {
-	--background: #ffffff;
+  --background: #ffffff;
+  --background-ui: rgb(230,230,230);
 	--color: #000000;
+	--mid: #7f7f7f;
+  --shadow: rgb( 0, 0, 0, 0.15);
+  --hover: rgba( 215, 245, 245, 1 );
+  --active: rgba( 215, 245, 245, .5 );
+
+}
+
+@media ( prefers-color-scheme: dark ) {
+	:root {
+    --background: #333333;
+    --background-ui: rgb(0,0,0);
+		--color: #ffffff;
+    --shadow: rgb( 255, 255, 255, 0.15);
+    --hover: rgba( 215, 245, 245, 1 );
+    --active: rgba( 215, 245, 245, .3 );
+	}
+}
+
+html {
+  font-size: 140%;
 }
 
 body {
 	background: var(--background);
 	color: var(--color);
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", Arial, Helvetica, sans-serif;
-	font-size: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", Arial, Helvetica, sans-serif;
+  font-weight: 300;
 }
 
 a {
@@ -18,81 +39,12 @@ a {
 }
 
 .added {
-  color: #aaa; font-style: italic; }
-
-input, select, button {
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
-  box-sizing: border-box;
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  height: 40px;
-  line-height: 1em;
-  padding: 0;
-}
-
-input {
-  text-indent: .3em;
-}
-input {
-  width: 100%;
-}
-
-input[type=checkbox] {
-  box-shadow: none; }
-
-input[type=reset] {
-	background: none;
-	border: none;
-	color: #999;
-	font-size: 14px;
-	height: auto;
-	line-height: 2;
-}
-
-select {
-  /* Removes the default <select> styling */
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-
-  /* Positions background arrow image */
-  background-color: #fff;
-  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAh0lEQVQ4T93TMQrCUAzG8V9x8QziiYSuXdzFC7h4AcELOPQAdXYovZCHEATlgQV5GFTe1ozJlz/kS1IpjKqw3wQBVyy++JI0y1GTe7DCBbMAckeNIQKk/BanALBB+16LtnDELoMcsM/BESDlz2heDR3WePwKSLo5eoxz3z6NNcFD+vu3ij14Aqz/DxGbKB7CAAAAAElFTkSuQmCC');
-  background-repeat: no-repeat;
-  background-position: right center;
-
-  padding-right: 17px;
-}
-optgroup {
-  font-style: normal;
-  font-weight: 500;
-}
-label.has-placeholder {
-  display: none; }
-
-button, input[type=button], input[type=submit] {
-  background: #eee;
-  border: 1px solid rgba( 0, 0, 0, .2 );
-  box-shadow: none;
-  border-radius: 5px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  color: #000;
-}
-
-form input[type=checkbox] {
-  height: 20px;
-  width: 20px;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 100;
-  letter-spacing: .02em;
+  color: var(--mid);
+  font-style: italic;
 }
 
 .full-page {
-  background: white;
+  background: var(--background);
   padding-top: 1em;
   top: 0;
   left: 0;
@@ -117,7 +69,7 @@ h1, h2, h3, h4, h5, h6 {
 	  position: relative;
 	  text-align: center; }
 	  .full-page .content .logo h1 {
-		font-size: 3rem;
+		font-size: 2.4rem;
 		font-weight: 100; }
 	.full-page .content .features {
 	  margin-top: 1em; }
@@ -200,4 +152,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 .search-select .single:hover {
   cursor: crosshair !important;
+}
+
+label.has-placeholder {
+	display: none;
 }
