--- a/src/components/collapsible/styles.scss
+++ b/src/components/collapsible/styles.scss
@@ -3,10 +3,6 @@
 .collapsible {
 	a {
 		text-decoration: none;
-
-		&:hover {
-			text-decoration: underline;
-		}
 	}
 }
 
@@ -30,6 +26,7 @@
 	}
 
 	svg {
+		fill: #fff;
 		vertical-align: middle;
 
 		&:hover [fill] {
