--- a/src/components/root.scss
+++ b/src/components/root.scss
@@ -1,13 +1,8 @@
 @import './colors.scss';
+@import './dimensions.scss';
 
 .root {
 	position: relative;
-	background: #fff;
-
-	/*@media ( prefers-color-scheme: dark ) {
-		background: #000;
-		color: #fff;
-	}*/
 
 	input[type=submit],
 	button {
@@ -15,4 +10,81 @@
 			background: $hover;
 		}
 	}
+}
+
+
+// Reset stuff
+input, select, button {
+	background: var(--background-ui);
+	border: 1px solid var(--mid);
+	box-sizing: border-box;
+	color: var(--color);
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 1.4em;
+	height: $dock-height;
+	line-height: 1em;
+	padding: 0;
+}
+
+button svg {
+	fill: var(--color);
+}
+
+input {
+	text-indent: .3em;
+	width: 100%;
+}
+
+input[type=checkbox] {
+box-shadow: none; }
+
+input[type=reset] {
+	background: none;
+	border: none;
+	color: var(--mid);
+	height: auto;
+	line-height: 2;
+}
+
+/* Removes the default <select> styling */
+select {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+
+	/* Positions background arrow image */
+	background-color: var(--background-ui);
+	background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%23000000'><polygon points='0,0 100,0 50,50'/></svg>");
+	background-size: 12px;
+	background-position: calc(100% - 5px) center;
+	background-repeat: no-repeat;
+
+	padding-right: 20px;
+}
+@media ( prefers-color-scheme: dark ) {
+	select {
+		background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%23ffffff'><polygon points='0,0 100,0 50,50'/></svg>");
+	}
+}
+
+optgroup {
+	font-style: normal;
+	font-weight: 500;
+}
+
+button, input[type=button], input[type=submit] {
+	background: var(--background-ui);
+	border: 1px solid var(--mid);
+	box-shadow: none;
+	color: var(--color);
+}
+
+form input[type=checkbox] {
+	height: 20px;
+	width: 20px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: 100;
+	letter-spacing: .02em;
 }
