--- a/src/components/trays/styles.scss
+++ b/src/components/trays/styles.scss
@@ -5,7 +5,7 @@
 	overflow: auto;
 	position: absolute;
 	top: $dock-height;
-	bottom: 56px;
+	bottom: $dock-height;
 }
 
 .tray {
@@ -29,7 +29,7 @@
 	}
 
 	input, select {
-		height: auto;
+
 	}
 
 	button {
@@ -130,4 +130,8 @@
 	display: flex;
 	align-items: center;
 	padding-left: 10px;
+}
+
+.sidebar-controls-right-outer {
+	display: flex;
 }
