--- a/src/components/dock/style.scss
+++ b/src/components/dock/style.scss
@@ -21,6 +21,7 @@
 }
 
 .dock-version-selectors {
+	border-right: 1px solid var(--mid);
 	display: flex;
 	justify-content: center;
 	margin: 0 auto;
