fix padding in search form

--- a/src/components/root.scss
+++ b/src/components/root.scss
@@ -45,7 +45,7 @@ box-shadow: none; }
 input[type=reset] {
 	background: none;
 	border: none;
-	color: var(--mid);
+	color: var(--color-dimmed);
 	height: auto;
 	line-height: 2;
 }
