add some padding

--- a/src/components/word-details/styles.scss
+++ b/src/components/word-details/styles.scss
@@ -1,5 +1,9 @@
 @import '../colors.scss';
 
+.word-block-help {
+	padding: .5em;
+}
+
 .fake-link {
 	cursor: pointer;
 	text-decoration: underline;
