--- a/src/components/root.scss
+++ b/src/components/root.scss
@@ -45,6 +45,7 @@ input[type=reset] {
 	background: none;
 	border: none;
 	color: var(--color-dimmed);
+	font-size: 1em;
 	height: auto;
 	line-height: 2;
 }
