--- a/src/components/reference/styles.scss
+++ b/src/components/reference/styles.scss
@@ -54,8 +54,8 @@
 		}
 
 		.verseNumber {
-			color: var(--background);
-			text-shadow: 1px 1px var(--color);
+			color: #fff;
+			text-shadow: 1px 1px #000;
 		}
 	}
 }
@@ -87,7 +87,6 @@
 }
 
 .hidden {
-	background-color: var(--background);
 	display: flex;
 	flex-direction: column;
 	padding-top: 5px;
@@ -110,7 +109,7 @@
 	width: $column-padding;
 
 	span:hover {
-		color: $hover;
+		color: var(--accent);
 	}
 }
 
